--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 				Education
 		</a></li>
 
-		<li><a href="#two">
-			Skills
+		<li><a href="#two">Experience
 		</a></li>
 
 		<li><a href="#three">
@@ -59,7 +58,7 @@
 		</a></li>
 
 		<li><a href="#four">
-			Experience
+			Skills
 		</a></li>
 
 		<li><a href="http://home.ustc.edu.cn/~zjx219/index.html">中文</a></li>
@@ -110,49 +109,62 @@
 								School of the Gifted Young
 								</div>
 							</div>
-							</section>
+						</section>
 
 					<!-- Two -->
 						<section id="two">
 							<div class="container">
-							<header class="major" id="#one2">
-							  <h2>Skills</h2>
-						   </header>
+							<header class="major" id="#two">
+							  <h2>Experience</h2>
+							</header>
 							 <div class="major">
 								 <div>
-									 <strong>
-									 Programming Languages:
-									 </strong>
-									 Python, C/C++, MATLAB, Mathematica, LabVIEW
-								 </div>
-								 <div>
-									 <strong>
-									 Frameworks:
-									 </strong>
-									 ROS, PCL, OpenCV
-								 </div>
-								 <div>
-									 <strong>
-									 Tools:
-									 </strong>
-									 Git, Makefile, Xilinx SDSoC and VivadoHLS
-								 </div>
-								 <div>
-									 <strong>
-									 Developing Experience:
-									 </strong>
-									 ARM Cortex-M4 based on Kinetis K60, Xilinx ZedBoard
-								 </div>
-							 </div>
-
-
-
-
-
-
-
-
-
+								<div style = "float: left">
+										<strong>
+										Software Engineer
+										</strong>
+										Horizon Robotics
+									</div>
+									<div style = "float: right">Summer 2019</div>
+								</div>
+								<br>
+								<div style="text-indent: 2em;">
+									<ur>
+										<li>Exchange Students in Department of Physics</li>
+										<li>Conducted experiments and explored modelling for paper twisting patterns. </li>
+									</ur>
+								</div>
+								<br>
+								 <div style = "float: left">
+										<strong>
+										Teaching Assistant
+										</strong>
+										Peking University
+									</div>
+									<div style = "float: right">Summer 2016</div>
+								</div>
+								<br>
+								<div style="text-indent: 2em;">
+									<ur>
+										<li>Conducted weekly lectures in Calculus for an Economics course. </li>
+									</ur>
+								</div>
+								<br>
+								<div style = "float: left">
+										<strong>
+										Research Assistant
+										</strong>
+										National Tsing Hua University
+									</div>
+									<div style = "float: right">Spring 2016</div>
+								<br>
+								<div style="text-indent: 2em;">
+									<ur>
+										<li>Exchange Students in Department of Physics</li>
+										<li>Conducted experiments and explored modelling for paper twisting patterns. </li>
+									</ur>
+								</div>
+								<br>
 							</div>
 					  </section>
 
@@ -163,7 +175,26 @@
 				      <header class="major" id="#one3">
 				        <h2>Projects</h2>
 			         </header>
-							<div class="features">
+					  <div class="features">
+						  <article>
+										<a class="image"><img src="images/arm_control.png" alt=""/>
+										<h5 align="center">Spectrum</h5>
+										</a>
+						    <div class="inner">
+						      <h4 title="Fall 2018"><a href="https://github.com/scottlx/Wheelchair-Arm-Control" target="_blank" title="GitHub Page">Natural Noise Generator</a></h4>
+								<ul>
+								  <li>Produce Nature Noise like beach sound or birds singing.</li>
+								  <li>Developed a new model based on WaveGAN to generate continous sound file.</li>
+								  <li>Explored different datasets' characteristic on the model</li>
+								  <li>Integrated Alexa interface that allowed users to control Robotic Arm with their voice.</li>
+										<li>Sample audio <audio src="audio/ocean.mp3" controls="controls">
+									Your browser does not support the audio tag.
+								</audio></li>
+									
+							    </ul>
+								
+							  </div>
+									</article>
 									<article>
 										<a class="image"><img src="images/arm_control.png" alt=""/>
 										<h5 align="center">Segementation using PointNet</h5>
@@ -203,7 +234,7 @@
 													<ul>
 									  					<li>Explored and designed Partial Binarized algorithm for Deconvolution-Based Generators.</li>
 									  					<li>Achieved 25x saving in memory and 1.9x speed up with little performance loss.</li>
-									  					<li>Published as second author <a href=https://arxiv.org/pdf/1802.09153.pdf" title="PDF paper" target="_blank" class="fa fa-file-pdf-o fa-lg" aria-hidden="true" ></a></li>
+									  					<li>Published as second author <a href="https://arxiv.org/pdf/1802.09153.pdf" title="PDF paper" target="_blank" class="fa fa-file-pdf-o fa-lg" aria-hidden="true" ></a></li>
 													</ul>
 
 												</div>
@@ -224,7 +255,7 @@
 
 												</div>
 									</article>
-									<article>
+						<article>
 										<a class="image"><img src="images/mendocino.gif" alt="" width="118%" /></a>
 										<div class="inner">
 											<h4 title="Spring 2015">Mendocino Motor</h4>
@@ -236,84 +267,45 @@
 													</ul>
 									   </div>
 									</article>
-									<article>
-										<a class="image"><img src="images/gaussgun.png" alt="" />
-																	  <h5 style="color:#5F82B5">Blue Line: theoritical estimation</h5>
-																	  <h5 style="color: #FF0000">Red Dots: real data</h5></a>
-																    <div class="inner">
-																      <h4 title="Spring 2015">Coilgun Simulating</h4>
-
-											 		<ul>
-									  					<li>Built the physical model for a mutil-level induction coilgun</li>
-									  					<li>Figured out the theoretically optimal initial states</li>
-									  					<li>Verified with real datas by measuring the ejecting speed of the coilgun</li>
-													</ul>
-															        </div>
-									 </article>
-							</div>
-						</div>
+</div>
+					</div>
 					</section>
 
 				  <!-- Section Four -->
 					<section id="four">
 							<div class="container">
 							  <header class="major" id="#one4">
-							    <h2>Experience</h2>
+							    <h2>Skills</h2>
 							  </header>
 								<div class="major">
-									<div style = "float: left">
-										<strong>
-										Research Assistant
-										</strong>
-										University of Notre Dame
-									</div>
-									<div style = "float: right">Summer 2017</div>
-								</div>
+									<div>
+									 <strong>
+									 Programming Languages:
+									 </strong>
+									 Python, C/C++, MATLAB, Mathematica, LabVIEW
+								 </div>
+								 <div>
+									 <strong>
+									 Frameworks:
+									 </strong>
+									 ROS, PCL, OpenCV
+								 </div>
+								 <div>
+									 <strong>
+									 Tools:
+									 </strong>
+									 Git, Makefile, Xilinx SDSoC and VivadoHLS
+								 </div>
+								 <div>
+									 <strong>
+									 Developing Experience:
+									 </strong>
+									 ARM Cortex-M4 based on Kinetis K60, Xilinx ZedBoard
+								 </div>
 								<br>
-								<div style="text-indent: 2em;">
-									<ur>
-										<li>Explored and designed Binarized algorithm for Deconvolution-Based Generators. </li>
-										<li>Implemented and processed all experiments data.</li>
-										<li>See <a href="#gan">Binarization of Generators</a>.</li>
-									</ur>
+						</div>
 								</div>
-								<br>
-								<div>
-									<div style = "float: left">
-										<strong>
-										Teaching Assistant
-										</strong>
-										Peking University
-									</div>
-									<div style = "float: right">Summer 2016</div>
-								</div>
-								<br>
-								<div style="text-indent: 2em;">
-									<ur>
-										<li>Conducted weekly lectures in Calculus for an Economics course. </li>
-									</ur>
-								</div>
-								<br>
-								<div>
-								<div style = "float: left">
-										<strong>
-										Research Assistant
-										</strong>
-										National Tsing Hua University
-									</div>
-									<div style = "float: right">Spring 2016</div>
-								</div>
-								<br>
-								<div style="text-indent: 2em;">
-									<ur>
-										<li>Exchange Students in Department of Physics</li>
-										<li>Conducted experiments and explored modelling for paper twisting patterns. </li>
-									</ur>
-								</div>
-								<br>
-								</div>
-							</div>
-						</section>
+								</section>
 		</div>
 	</body>
 </html>
