add horizon intern experience

--- a/index.html
+++ b/index.html
@@ -87,9 +87,6 @@
 								Master of Science in Electrical and Computer Engineering
 								</div>
 								<div style="text-indent: 2em;">
-								Robotics Specialization
-								</div>
-								<div style="text-indent: 2em;">
 									Current GPA: 3.8/4.0
 								</div>
 								<br>
@@ -130,8 +127,9 @@
 								<br>
 								<div style="text-indent: 2em;">
 									<ur>
-										<li>Exchange Students in Department of Physics</li>
-										<li>Conducted experiments and explored modelling for paper twisting patterns. </li>
+										<li>Designed and implemented in-car eye gaze data collection system.</li>
+										<li>Automation intrinsic and extrinsic callibration with multiple RealSense and IR cameras.</li>
+										<li>Develop the system into a user friendly SDK for data collection.</li>
 									</ur>
 								</div>
 								<br>
@@ -177,24 +175,23 @@
 			         </header>
 					  <div class="features">
 						  <article>
-										<a class="image"><img src="images/arm_control.png" alt=""/>
+										<a class="image"><img src="images/wavegan.png" alt=""/>
 										<h5 align="center">Spectrum</h5>
 										</a>
 						    <div class="inner">
-						      <h4 title="Fall 2018"><a href="https://github.com/scottlx/Wheelchair-Arm-Control" target="_blank" title="GitHub Page">Natural Noise Generator</a></h4>
+						      <h4 title="Fall 2018"><a href="https://github.com/manymuch/Natural-Noise-Generator" target="_blank" title="GitHub Page">Natural Noise Generator</a></h4>
 								<ul>
 								  <li>Produce Nature Noise like beach sound or birds singing.</li>
 								  <li>Developed a new model based on WaveGAN to generate continous sound file.</li>
 								  <li>Explored different datasets' characteristic on the model</li>
-								  <li>Integrated Alexa interface that allowed users to control Robotic Arm with their voice.</li>
-										<li>Sample audio <audio src="audio/ocean.mp3" controls="controls">
+								  <li>Sample audio <audio src="audio/ocean.mp3" controls="controls">
 									Your browser does not support the audio tag.
 								</audio></li>
 									
 							    </ul>
 								
 							  </div>
-									</article>
+						</article>
 									<article>
 										<a class="image"><img src="images/arm_control.png" alt=""/>
 										<h5 align="center">Segementation using PointNet</h5>
@@ -239,7 +236,7 @@
 
 												</div>
 									</article>
-									<article>
+						<article>
 										<a class="image"><img src="images/eye_tracking.gif" alt=""/>
 										</a>
 											    <div class="inner">
@@ -254,18 +251,6 @@
 													</ul>
 
 												</div>
-									</article>
-						<article>
-										<a class="image"><img src="images/mendocino.gif" alt="" width="118%" /></a>
-										<div class="inner">
-											<h4 title="Spring 2015">Mendocino Motor</h4>
-
-											 		<ul>
-									  					<li>Built a Mendocino Motor with self-designed 3D printed parts.</li>
-									  					<li>The whole rotor can levitate in the air with the help of the strong permanent magnets</li>
-									  					<li>Rotates smoothly under the sun.</li>
-													</ul>
-									   </div>
 									</article>
 </div>
 					</div>
