fix indent bugs

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 								<div style="text-indent: 2em;">
 									<ur>
 										<li>Designed and implemented in-car eye gaze data collection system.</li>
-										<li>Automation intrinsic and extrinsic callibration with multiple RealSense and IR cameras.</li>
+										  <li>Automatic intrinsic & extrinsic callibration with multiple RealSense and IR cameras.</li>
 										<li>Develop the system into a user friendly SDK for data collection.</li>
 									</ur>
 								</div>
