--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									<ur>
 										<li>Designed and implemented in-car eye gaze data collection system.</li>
 										  <li>Automatic intrinsic & extrinsic callibration with multiple RealSense and IR cameras.</li>
-										<li>Develop the system into a user friendly SDK for data collection.</li>
+										<li>3D face landmark estimation based on mono IR camera.</li>
 									</ur>
 								</div>
 								<br>
@@ -187,9 +187,9 @@
 								  <li>Sample audio <audio src="audio/ocean.mp3" controls="controls">
 									Your browser does not support the audio tag.
 								</audio></li>
-									
+
 							    </ul>
-								
+
 							  </div>
 						</article>
 									<article>
