update horizon work experience

--- a/chn.html
+++ b/chn.html
@@ -80,7 +80,7 @@
                           <div style = "float: right">2018年9月-2019年12月</div>
                         </div>
                         <br>
-                        <div style="text-indent: 2em;"> Master of Science in Electrical and Computer Engineering </div>
+                        <div style="text-indent: 2em;"> 电子计算机工程硕士 </div>
                         <div style="text-indent: 2em;"> 目前GPA: 3.8/4.0 </div>
                         <br>
                         <div>
@@ -104,7 +104,7 @@
               <div style="text-indent: 2em;">
                 <ur>
                   <li>设计和实现车内视线跟踪数据采集系统. </li>
-                  <li>基于多个RealSense和红外摄像头的内参外参自动标定程序</li>
+                  <li>基于近红外单目摄像头头部姿态和三维坐标估计</li>
                 </ur>
               </div>
               <br>
