--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								 <div>
 								<div style = "float: left">
 										<strong>
-										Software Engineer
+										Software Engineer Intern
 										</strong>
 										Horizon Robotics
 									</div>
@@ -128,8 +128,8 @@
 								<div style="text-indent: 2em;">
 									<ur>
 										<li>Designed and implemented in-car eye gaze data collection system.</li>
-										  <li>Automatic intrinsic & extrinsic callibration with multiple RealSense and IR cameras.</li>
-										<li>3D face landmark estimation based on mono IR camera.</li>
+										  <li>Robust Point Regsitration for ordered, groupwise, rigid point clouds</li>
+										<li>face 6DOF estimation based on mono IR camera.</li>
 									</ur>
 								</div>
 								<br>
@@ -243,10 +243,10 @@
 											      <h4 title="2015-2016">Eye Tracking System</h4>
 
 													<ul>
-									  					<li>Designed and built a system with helmet, Lidar and camera that track the user’s gaze point.</li>
-									  					<li>Used infrared camera integrated in the helmet to catch eye’s movements.</li>
-									  					<li>Implemented sensor fusion algorithms for IMU and Vive Lighthouse to get the helmet’s 6DoF.</li>
-														<li>Controlled a Pan-Tilt Camera to follow the user’s gaze point.</li>
+									  					<li>Designed and built a system with helmet, Lidar and camera that track the user's gaze point.</li>
+									  					<li>Used infrared camera integrated in the helmet to catch eye's movements.</li>
+									  					<li>Implemented sensor fusion algorithms for IMU and Vive Lighthouse to get the helmet's 6DoF.</li>
+														<li>Controlled a Pan-Tilt Camera to follow the user's gaze point.</li>
 														<li>Designed and built auto calibration system for the helmet and pan-tilt camera.</li>
 													</ul>
 
