fix small typos

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 								<div style="text-indent: 2em;">
 									<ur>
 										<li>Designed and implemented in-car eye gaze data collection system.</li>
-										  <li>Robust Point Regsitration for ordered, groupwise, rigid point clouds</li>
-										<li>face 6DOF estimation based on mono IR camera.</li>
+										  <li>Robust Point Regsitration for ordered, groupwise, rigid point clouds.</li>
+										<li>Face 6DOF estimation based on mono IR camera.</li>
 									</ur>
 								</div>
 								<br>
